objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Claim Case Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Claim Form Sent</fullName>
        </values>
        <values>
            <fullName>Claim Rejected</fullName>
        </values>
        <values>
            <fullName>Escalated %2F Upgraded</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reopened</fullName>
        </values>
        <values>
            <fullName>Waiting for customer</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated %2F Upgraded</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reopened</fullName>
        </values>
        <values>
            <fullName>Waiting for customer</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Am_I_the_Case_Owners_Manager__c</fullName>
        <description>Used to calculate whether the logged in user is the Case Owners Manger or not.</description>
        <formula>IF( Owner:User.ManagerId  = $User.Id , True , False)</formula>
        <inlineHelpText>Used to calculate whether the logged in user is the Case Owners Manger or not.</inlineHelpText>
        <label>Am I the Case Owners Manager?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup field to a Booking so that case can be related to a specific booking e.g. for failed collections</description>
        <inlineHelpText>Is this case related to a Booking?</inlineHelpText>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_me_back__c</fullName>
        <description>create task with reminder</description>
        <label>Call me back</label>
        <picklist>
            <picklistValues>
                <fullName>1 hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48 hours</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Age_In_Business_Hours__c</fullName>
        <description>The total case age in business hours from open to close.</description>
        <inlineHelpText>The total case age in business hours from open to close.</inlineHelpText>
        <label>Case Age In Business Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <formula>TEXT(Days__c) &amp; &apos; days &apos; &amp; TEXT( Hours__c) &amp; &apos; hours &apos; &amp; TEXT(Minutes__c ) &amp; &apos; minutes&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Back_to_Queue_MA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case back to queue (Major Accounts)</description>
        <label>Case back to queue (Major Accounts)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If ticked, it means another agent has made an update that requires the Case Owner to review</inlineHelpText>
        <label>Case Owner Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Owners_Manager__c</fullName>
        <description>Shows the name of the Case Owners Manager as setup on User records. This field is used for reporting at team level.</description>
        <formula>Owner:User.Manager.FirstName + &apos; &apos; + Owner:User.Manager.LastName</formula>
        <label>Case Owners Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Types_Level_2__c</fullName>
        <label>Sub Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Check Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C.I.T Query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Query</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redelivery Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stationary Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transit Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paperwork Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return to Sender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement not Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged Consignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>CS_Claims__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_to_Standard_Acheved__c</fullName>
        <description>Used to calculate what records have been closed to standard. (Removes the need to use bucket fields on reports and allows percentage calculations on report groupings).</description>
        <formula>IF( Case_Age_In_Business_Hours__c  &lt;= 10, True, False)</formula>
        <label>Closed to Standard Achieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collection_Depot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If a Collection Exception is selected then the Case will be assigned using the &apos;Collection Queue&apos; field for this Depot. 

Click on the Depot to see where this case would be assigned to.</inlineHelpText>
        <label>Collection Depot</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select an account of type &apos;Depot&apos;.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Depot</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Collection Depot)</relationshipLabel>
        <relationshipName>CollectionCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <label>Colour</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Identifiable Features / Logos /Labels etc</inlineHelpText>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignment_Number__c</fullName>
        <description>This is the Consignment Number, and is used to relate specific Consignment Number if a case is raised for it</description>
        <label>Consignment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <formula>FLOOR((now() - CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Depot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If a Delivery Exception is selected then the Case will be assigned using the &apos;Origin Queue&apos; field from this Depot. 

Click on the Depot to see where this case would be assigned to.</inlineHelpText>
        <label>Origin Depot</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account must be of type &apos;Depot&apos;.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Depot</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Delivery Depot)</relationshipLabel>
        <relationshipName>DeliveryCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimensions__c</fullName>
        <inlineHelpText>Please enter dimensions of Length, Height and Width of each item</inlineHelpText>
        <label>Dimensions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Escalate_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalate Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalated_Upgraded_Audit_Trail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used with a workflow rule to set an audit history for cases that were ever set to a status of &apos;Escalated / Upgraded&apos;.</description>
        <label>Escalated / Upgraded Audit Trail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <inlineHelpText>Chose whether this Case is related to a Collection or Delivery issue. 

This info is then used with either the Collection Depot or Origin Depot fields respectively to Assign the case when the &apos;Assign using active assignment rules&apos; checkbox is ticked.</inlineHelpText>
        <label>Exception</label>
        <picklist>
            <picklistValues>
                <fullName>Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goods_Description__c</fullName>
        <inlineHelpText>General Description of the Items related to the consignment</inlineHelpText>
        <label>Goods Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <formula>FLOOR(MOD((now() - CreatedDate)*24,24))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to control when a cases enters and exits an approval process</description>
        <label>In Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Scan__c</fullName>
        <label>Last Scan</label>
        <picklist>
            <picklistValues>
                <fullName>No Scan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change__c</fullName>
        <description>Stores the last time the status changed -- used by the Case Business Hours Tools package.</description>
        <label>Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <formula>FLOOR(MOD((now() - CreatedDate)*24*60,60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitor_Until_Audit_History__c</fullName>
        <description>Used to save the date/time for which the case monitoring was set for.  This can be used for reporting purposes once the field has been cleared by the user.</description>
        <label>Monitor Until Audit History</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Monitor_Until__c</fullName>
        <inlineHelpText>Use this field to flag any cases that need to be monitored after Case Closure due to customer request.</inlineHelpText>
        <label>Monitor Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Monitored_At__c</fullName>
        <description>Once the user clears the Monitor Until field this field is set with the current time</description>
        <label>Monitored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__EmailSentTo__c</fullName>
        <label>EmailSentTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMAccountOverride__c</fullName>
        <label>NVMAccountOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMCaseOrigin__c</fullName>
        <description>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</description>
        <inlineHelpText>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</inlineHelpText>
        <label>NVM Case Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMNodeOverride__c</fullName>
        <description>Used to override the NewVoiceMedia node a case routing request is sent to</description>
        <inlineHelpText>Used to override the NewVoiceMedia node a case routing request is sent to</inlineHelpText>
        <label>NVMNodeOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedIn__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged in</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged in</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedIn</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedOut__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged out</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged out</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedOut</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMRoutable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine whether a case should be routed to an agent via NVM</description>
        <inlineHelpText>Used to determine whether a case should be routed to an agent via NVM</inlineHelpText>
        <label>NVMRoutable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__RoutePlanIdentifier__c</fullName>
        <label>RoutePlanIdentifier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Skills__c</fullName>
        <label>Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_opened_on_business_hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not opened on business hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>Field to show an icon for each different Case Origin. It need a static resource containing all icons and the correct URL to access it</description>
        <formula>IMAGE(&apos;/resource/Icons/&apos;&amp; 

 CASE( Origin , 
    &apos;Chat&apos;,&apos;sales_force_icons_20px_vector_05.png&apos;,
    &apos;Email&apos;,&apos;sales_force_icons_20px_vector_14.png&apos;,
    &apos;Phone&apos;,&apos;sales_force_icons_20px_vector_34.png&apos;,
    &apos;Social Media&apos;,&apos;sales_force_icons_20px_vector_38.png&apos;,
    &apos;Direct Mail (Paper)&apos;,&apos;sales_force_icons_20px_vector_10.png&apos;,
    &apos;SSS&apos;,&apos;sales_force_icons_20px_vector_42.png&apos;,
    &apos;SSS Track&apos;,&apos;sales_force_icons_20px_vector_46.png&apos;,
    &apos;Web&apos;,&apos;sales_force_icons_20px_vector_52.png&apos;,
    &apos;Face to Face&apos;,&apos;sales_force_icons_20px_vector_22.png&apos;,
    &apos;Email Campaign&apos;,&apos;sales_force_icons_20px_vector_18.png&apos;,
    &apos;Fax&apos;,&apos;sales_force_icons_20px_vector_27.png&apos;,
    &apos;Managing Directors Office&apos;,&apos;sales_force_icons_20px_vector_30.png&apos;,
    &apos;System&apos;, &apos;sales_force_icons_20px_vector_101.png&apos;,
    &apos;Agent&apos;, &apos;sales_force_icons_20px_agent.png&apos;, 
    &apos;&apos;)
, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role_for_ListViews__c</fullName>
        <description>Calculates the Role of the Case Owner. This field was created so that it can be used as List View criteria. 

For example use it to create a view of all Manchester Cases Including Assigned by filtering on Owner Name Contains Manchester MAD (for any in the queues) OR Case Owner Role Contains &apos;Manchester MAD&apos;.  

Note:Queue and Role names are subject to change.</description>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Role for List Views</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>IF(Owner:User.LastName  &lt;&gt; &apos;&apos;,Owner:User.FirstName &amp;&apos; &apos;&amp; Owner:User.LastName, Owner:Queue.QueueName &amp;&apos; &apos;&amp; HYPERLINK(&apos;/&apos;&amp;  Id  &amp;&apos;/a?retURL=%2F&apos;&amp; Id, &apos;[Change]&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packaging_Type__c</fullName>
        <label>Packaging Type</label>
        <picklist>
            <picklistValues>
                <fullName>TSL 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSL 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSL 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSL 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSL 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assorted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dangerous Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incompatible Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jiffy Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Length</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pallet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <description>Used to capture additional info to the Phone Number field if required</description>
        <inlineHelpText>Used to capture additional info to the Phone Number field if required</inlineHelpText>
        <label>Phone Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Priority_Change_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field must be kept hidden. It&apos;s used to control the change of priority in the approval process</description>
        <label>Priority Change Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority_Change_Explanation__c</fullName>
        <label>Priority Change Explanation</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proactive_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By default, any case which results from a customer contacting TNT first is Reactive. Checking this field indicates that a Proactive Case has been raised on behalf of the customer, before the customer has contacted TNT.</description>
        <inlineHelpText>By default, any case which results from a customer contacting TNT first is Reactive. Checking this field indicates that a Proactive Case has been raised on behalf of the customer, before the customer has contacted TNT.</inlineHelpText>
        <label>Proactive Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reopened_Audit_Trail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used with a workflow rule to set an audit history for cases that were ever set to a status of &apos;Reopened&apos;.</description>
        <label>Reopened Audit Trail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewed_by_Team_Leader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the source origin for a case is not a phone call, it is routed to the Non-Phone Origin Queue.  A Team Leader has access to this queue, and must review the case to save the relevant Case Type and Case Priority against it. Then they should check this Checkbox to indicate that it has been reviewed by them. By checking this, it will trigger a workflow to place this case in the unassigned case queue.</description>
        <inlineHelpText>Has this case been reviewed by a Team Leader? (e.g. Case Type and Priority)</inlineHelpText>
        <label>Reviewed by Team Leader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Save_as_3rd_Party_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This should be checked if you&apos;d like to save the contact information to use again</inlineHelpText>
        <label>Save as 3rd Party Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surname__c</fullName>
        <label>Surname</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_With_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent in the hands of the customer.</description>
        <inlineHelpText>The time in business hours that this case spent in the hands of the customer.</inlineHelpText>
        <label>Time With Customer</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent with support.</description>
        <inlineHelpText>The time in business hours that this case spent with support.</inlineHelpText>
        <label>Time With Support</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Twentyfour_Hour_Deadline__c</fullName>
        <description>calculate the 24 hour deadline based on case opened datetime by taking into consideration business days and holidays</description>
        <label>24 Hour Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type_of_Goods__c</fullName>
        <label>Type of Goods</label>
        <picklist>
            <picklistValues>
                <fullName>Home Ent.General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Televisions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD Players</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPods / MP3 Players</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablets (iPads etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Phones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Cameras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Parts Gen.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windscreens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Equip Gen.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Footwear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perfumes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewellery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garden Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luggage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Goods Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical &amp; Samples</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UUCN_Number__c</fullName>
        <inlineHelpText>The Track Consignment Button can be used only if the UUCN is known</inlineHelpText>
        <label>UUCN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>Origin__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Owner__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Consignment_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
</CustomObject>